After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 665592 - Can't call offline contacts from the log viewer
Can't call offline contacts from the log viewer
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Archives
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-12-05 13:43 UTC by Guillaume Desmottes
Modified: 2011-12-06 08:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
factor out do_update_buttons_sensitivity() (4.14 KB, patch)
2011-12-05 14:18 UTC, Guillaume Desmottes
accepted-commit_now Details | Review
log-window: update buttons if contact's caps are updated (1.91 KB, patch)
2011-12-05 14:18 UTC, Guillaume Desmottes
accepted-commit_now Details | Review
try requesting a TpContact when creating a contact from the logger (2.97 KB, patch)
2011-12-05 14:18 UTC, Guillaume Desmottes
accepted-commit_now Details | Review

Description Guillaume Desmottes 2011-12-05 13:43:21 UTC
- Try calling a PSTN number
- Got to the log viewer and select this contact
- You can't call him from the log viewer
Comment 1 Guillaume Desmottes 2011-12-05 14:18:37 UTC
Created attachment 202832 [details] [review]
factor out do_update_buttons_sensitivity()

This fix a bug with button_video_binding not being re-installed when a contact
supporting video was selected. It was only re-installed when using the contact
from the selected event.
Comment 2 Guillaume Desmottes 2011-12-05 14:18:40 UTC
Created attachment 202833 [details] [review]
log-window: update buttons if contact's caps are updated
Comment 3 Guillaume Desmottes 2011-12-05 14:18:42 UTC
Created attachment 202834 [details] [review]
try requesting a TpContact when creating a contact from the logger

This is useful when displaying a contact which is not in our roster in the
logger (typically a PSTN number). Having a TpContact allow us to call him if
that's supported by the CM.
Comment 4 Danielle Madeley 2011-12-06 02:31:35 UTC
Review of attachment 202832 [details] [review]:

++
Comment 5 Danielle Madeley 2011-12-06 02:40:17 UTC
Review of attachment 202833 [details] [review]:

++
Comment 6 Danielle Madeley 2011-12-06 02:40:31 UTC
Review of attachment 202834 [details] [review]:

++
Comment 7 Guillaume Desmottes 2011-12-06 08:31:22 UTC
Merged to master.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.