factor out do_update_buttons_sensitivity()

This fix a bug with button_video_binding not being re-installed when a contact
supporting video was selected. It was only re-installed when using the contact
from the selected event.

https://bugzilla.gnome.org/show_bug.cgi?id=665592